Closed Bug 1703434 Opened 5 years ago Closed 5 years ago

[mips] undefined reference to `js::jit::MacroAssembler::branchTestValue

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 --- fixed

People

(Reporter: glandium, Assigned: zhaojiazhong-hf)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[task 2021-04-07T01:57:43.609Z] 01:57:43     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot -std=gnu++17 --target=mips64el-linux-gnuabi64 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fPIC -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -O2 -fno-omit-frame-pointer -funwind-tables  -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libxul.so -o libxul.so /builds/worker/workspace/obj-build/toolkit/library/gtest/libxul_so.list   -lpthread -fuse-ld=bfd -Wl,-rpath-link,/builds/worker/fetches/sysroot/lib/mips64el-linux-gnuabi64 -Wl,-rpath-link,/builds/worker/fetches/sysroot/usr/lib/mips64el-linux-gnuabi64 -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,nocopyreloc -Wl,-Bsymbolic-functions -Wl,--build-id=sha1 -fstack-protector-strong -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib  ../../../security/nss/lib/crmf/crmf_crmf/libcrmf.a ../../../js/src/build/libjs_static.a /builds/worker/workspace/obj-build/mips64el-unknown-linux-gnuabi64/release/libgkrust_gtest.a ../../../config/external/nspr/pr/libnspr4.so ../../../config/external/nspr/libc/libplc4.so ../../../config/external/nspr/ds/libplds4.so ../../../config/external/lgpllibs/liblgpllibs.so ../../../security/nss/lib/nss/nss_nss3/libnss3.so ../../../security/nss/lib/util/util_nssutil3/libnssutil3.so ../../../security/nss/lib/smime/smime_smime3/libsmime3.so ../../../config/external/sqlite/libmozsqlite3.so ../../../security/nss/lib/ssl/ssl_ssl3/libssl3.so ../../../widget/gtk/mozgtk/stub/libmozgtk_stub.so ../../../widget/gtk/mozwayland/libmozwayland.so -Wl,--version-script,symverscript  -ldl  -lpthread -ldl -lc -lffi -lm -L/builds/worker/fetches/sysroot/usr/lib/mips64el-linux-gnuabi64 -lfreetype -lfontconfig -lrt -lXrender -ldbus-glib-1 -ldbus-1 -lgobject-2.0 -lglib-2.0 -lpangocairo-1.0 -lpango-1.0 -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lX11-xcb -lxcb-shm -lxcb -lX11 -lXext -lpangoft2-1.0 -lXt -lgthread-2.0
[task 2021-04-07T01:57:43.609Z] 01:57:43     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: ../../../js/src/build/libjs_static.a(Unified_cpp_js_src_jit2.o): in function `js::jit::CacheIRCompiler::emitGuardFixedSlotValue(js::jit::ObjOperandId, unsigned int, unsigned int)':
[task 2021-04-07T01:57:43.610Z] 01:57:43     INFO -  /builds/worker/checkouts/gecko/js/src/jit/CacheIRCompiler.cpp:2017: undefined reference to `js::jit::MacroAssembler::branchTestValue(js::jit::AssemblerMIPSShared::Condition, js::jit::BaseIndex const&, js::jit::ValueOperand const&, js::jit::Label*)'
[task 2021-04-07T01:57:43.610Z] 01:57:43     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: /builds/worker/checkouts/gecko/js/src/jit/CacheIRCompiler.cpp:2017: undefined reference to `js::jit::MacroAssembler::branchTestValue(js::jit::AssemblerMIPSShared::Condition, js::jit::BaseIndex const&, js::jit::ValueOperand const&, js::jit::Label*)'
[task 2021-04-07T01:57:43.610Z] 01:57:43     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: ../../../js/src/build/libjs_static.a(Unified_cpp_js_src_jit2.o): in function `js::jit::CacheIRCompiler::emitGuardDynamicSlotValue(js::jit::ObjOperandId, unsigned int, unsigned int)':
[task 2021-04-07T01:57:43.611Z] 01:57:43     INFO -  /builds/worker/checkouts/gecko/js/src/jit/CacheIRCompiler.cpp:2047: undefined reference to `js::jit::MacroAssembler::branchTestValue(js::jit::AssemblerMIPSShared::Condition, js::jit::BaseIndex const&, js::jit::ValueOperand const&, js::jit::Label*)'
[task 2021-04-07T01:57:43.611Z] 01:57:43     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: /builds/worker/checkouts/gecko/js/src/jit/CacheIRCompiler.cpp:2047: undefined reference to `js::jit::MacroAssembler::branchTestValue(js::jit::AssemblerMIPSShared::Condition, js::jit::BaseIndex const&, js::jit::ValueOperand const&, js::jit::Label*)'
[task 2021-04-07T01:57:43.611Z] 01:57:43     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: libxul.so: hidden symbol `_ZN2js3jit14MacroAssembler15branchTestValueENS0_19AssemblerMIPSShared9ConditionERKNS0_9BaseIndexERKNS0_12ValueOperandEPNS0_5LabelE' isn't defined
[task 2021-04-07T01:57:43.611Z] 01:57:43     INFO -  /builds/worker/fetches/binutils/bin/ld.bfd: final link failed: bad value
[task 2021-04-07T01:57:43.611Z] 01:57:43     INFO -  clang-11: error: linker command failed with exit code 1 (use -v to see invocation)
Assignee: nobody → zhaojiazhong-hf
Blocks: sm-mips
Severity: -- → S4
Status: NEW → ASSIGNED
Component: JavaScript Engine → JavaScript Engine: JIT
Priority: -- → P1

Set release status flags based on info from the regressing bug 1700052

Port D110254 to mips64 platform and fix a typo in an assert.

Pushed by iireland@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/16caa2606663 [MIPS64] Add branchTestValue overload to MacroAssembler. r=iain
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: