Bug 1703434 - [MIPS64] Add branchTestValue overload to MacroAssembler. r=iain

Port D110254 to mips64 platform and fix a typo in an assert.

Differential Revision: https://phabricator.services.mozilla.com/D111234